refactor: restructure project for CLI usage, update file paths, and enhance TypeScript configuration

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,32 +1,40 @@
 {
   "compilerOptions": {
-    "lib": [
-      "esnext"
-    ],
     "target": "ESNext",
     "module": "ESNext",
+    "lib": ["esnext"],
+    "moduleResolution": "bundler",
     "moduleDetection": "force",
     "jsx": "react-jsx",
     "allowJs": true,
-    "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "verbatimModuleSyntax": true,
-    "noEmit": true,
+
     "strict": true,
     "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedIndexedAccess": true,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "noPropertyAccessFromIndexSignature": false,
+
+    // Type declarations only (no JS output), best for libraries and apps
+    "noEmit": true,
+
+    // Enable interop for CommonJS modules
+    "esModuleInterop": true,
+
+    // Enable declaration for generating .d.ts files if needed later
+    "declaration": true,
+
+    // Still needed for tooling that expects compiled output
+    "outDir": "./dist",
+
     "paths": {
-      "@/*": [
-        "./src/*"
-      ]
+      "@/*": ["./src/*"]
     }
   },
-  "include": [
-    "src/**/*.ts",
-    "src/scripts/**/*"
-  ]
+  "include": ["src/**/*.ts", "src/scripts/**/*", "src/**/*", "bin/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
