--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "react-component-search",
   "version": "1.0.0",
+  "description": "Generate search indexes and component maps for React projects",
+  "main": "dist/src/index.js",
+  "types": "dist/src/index.d.ts",
   "type": "module",
-  "main": "./dist/search.js",
   "module": "./dist/search.js",
-  "types": "./dist/search.d.ts",
+  "files": [
+    "dist"
+  ],
   "exports": {
     ".": {
       "import": "./dist/search.js",
@@ -13,7 +17,9 @@
     }
   },
   "scripts": {
-    "build": "tsc -p tsconfig.build.json"
+    "build": "tsc",
+    "postbuild": "chmod +x ./dist/bin/project-indexer.js",
+    "prepublishOnly": "npm run build"
   },
   "private": false,
   "peerDependencies": {
@@ -21,7 +27,9 @@
   },
   "devDependencies": {
     "@types/bun": "latest",
-    "@types/react": "^19.1.1"
+    "@types/react": "^19.1.1",
+    "@types/yargs": "^17.0.33",
+    "yargs": "^17.7.2"
   },
   "dependencies": {
     "@types/glob": "^8.1.0",
@@ -34,10 +42,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/yourusername/react-component-search"
+    "url": "https://github.com/samibentaiba/react-component-search"
   },
   "bugs": {
-    "url": "https://github.com/yourusername/react-component-search/issues"
+    "url": "https://github.com/samibentaiba/react-component-search/issues"
   },
-  "homepage": "https://github.com/yourusername/react-component-search#readme"
+  "homepage": "https://github.com/samibentaiba/react-component-search#readme"
 }
