--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "scripts": {
     "build": "tsc",
-    "postbuild": "chmod +x ./dist/bin/project-indexer.js",
+    "postbuild": "chmod +x ./dist/bin/node.ts",
     "prepublishOnly": "npm run build"
   },
   "private": false,
