--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "build": "tsc",
-    "postbuild": "chmod +x ./dist/src/bin/node.js",
+    "postbuild": "chmod +x ./dist/bin/node.js",
     "prepublishOnly": "npm run build"
   },
   "private": false,
